hard-gists/1267632/run.log
=== Docker Run Log for 1267632 ===
Started at: Mi 29. Okt 12:04:11 CET 2025

[2025-10-29 12:04:12] START: Running container for 1267632
[2025-10-29 12:04:12] SUCCESS: Container ea1b4bf9324cce61af361a037db48e4d28eac31154fc7aac58f1048855c32b6d started for 1267632
=== Container logs for 1267632 ===
  File "/snippet.py", line 64
    print 'Here is the count matrix'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1267632 ===
[2025-10-29 12:04:14] INFO: Container ea1b4bf9324cce61af361a037db48e4d28eac31154fc7aac58f1048855c32b6d has stopped
